--- a/hugo.toml
+++ b/hugo.toml
@@ -1,3 +1,6 @@
+baseURL = 'https://yourusername.github.io/'
+languageCode = 'en-us'
+title = 'TheRealHermann'
 theme = "PaperMod"
 contentDir = "content"
 
